--- a/.gitignore
+++ b/.gitignore
@@ -151,6 +151,7 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+aosidjf;laksdjf
 
 images/fonts/*
 images_storage/join_banners/*
