--- a/.gitignore
+++ b/.gitignore
@@ -152,6 +152,6 @@ cython_debug/
 #.idea/
 
 images/fonts/*
-images_storage/join_banners/*
-images_storage/leave_banners/*
-images_storage/pfp_images/*
+.join_banners/*
+.leave_banners/*
+.pfp_images/*
