--- a/.gitignore
+++ b/.gitignore
@@ -151,7 +151,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-images/fonts/*
-.join_banners/*
-.leave_banners/*
-.pfp_images/*
+**/temp_*.png
